# dreamstudio

./: .gitignore
DreamStudio_BE/: dreamstudio.session.sql  pyproject.toml  requirements.txt
DreamStudio_BE/sql/: auth_schema_no_tokens.sql  dreamstudio.session.sql  table_creation.sql
DreamStudio_BE/src/: celery_app.py  config.py  main.py
DreamStudio_BE/src/gpt/: apicalls.py
DreamStudio_BE/src/helpers/: auth_utils.py  bounty_ledger_utils.py  db.py  email.py  goals_utils.py  limiter.py  maintenance_cost_utils.py  openai.py  s3.py  serper.py  stripe_utils.py  verification_utils.py
DreamStudio_BE/src/models/: auth_models.py  auth_schemas.py  bounty_schemas.py  distribution_schemas.py  goal_models.py  goal_schemas.py  maintenance_cost_models.py  maintenance_cost_schemas.py  payment_models.py  users_models.py  verifications_models.py  verifications_schemas.py
DreamStudio_BE/src/routes/: admin_maintenance_costs.py  auth_google.py  auth_manual.py  auth_refresh.py  goals.py  payments.py  user.py  verifications.py
DreamStudio_BE/src/tasks/: deadline_tasks.py  distribution_tasks.py  evaluations.py  maintenance_cost_tasks.py  quiz_tasks.py  verification_cleanup.py
DreamStudio_BE/test/: main.py  refresh_test.py  test-email.py
DreamStudio_BE/test/user_signup/: google_signup_test.py  manual_signup_test.py
DreamStudio_FE/: App.tsx  README.md  app.json  package-lock.json  package.json  react-native-config.d.ts
DreamStudio_FE/android/: settings.gradle
DreamStudio_FE/android/app/: build.gradle  google-services.json
DreamStudio_FE/ios/: Podfile
(+34 files in other folders)
